@@ -1,3 +1,7 @@
+2007-02-16  Akira TAGOH  <at@gclab.org>
+
+	* donrails/tool/tables-postgresql.sql: sync.
+
 2007-02-13  ARAKI Yasuhiro  <yasu@debian.or.jp>
 
 	* donrails/app/views/layouts/default/notes.rhtml: Add RSS format version in title.
